src/test/deca/context/invalid/created/binary exp/modulo_bool_bool.deca
// Description :
//    test modulo entre un boolen et un boolen
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: L’opérande gauche est de type bool, L’opérande droite est de type bool. Or les opérandes d’un modulo doivent être de type ‘int’

{
bool a;
bool b;
int c = a % b;
}
